Plus que list-rapport et new-rapport

--- a/Projet/src/app/header/header.component.html
+++ b/Projet/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<div class="header">
+  <h1>Application de gestion des rapports</h1>
+
+  <nav>
+    <ul>
+      <li><a routerLink="/">Accueil</a></li>
+      <li><a routerLink="/ListeRapport">Liste des rapports</a></li>
+      <li><a routerLink="/new-rapport">Nouveau rapport</a></li>
+    </ul>
+  </nav>
+</div>
