--- a/Projet/src/app/home/home.component.html
+++ b/Projet/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<app-header></app-header>
+
+<div class="home">
+  <p>Vous avez un nouveau rapport de visite</p>
+  <button (click)="goToRapport()">Voir le rapport</button>
+</div>
