--- a/Projet/src/app/list-rapport/list-rapport.component.html
+++ b/Projet/src/app/list-rapport/list-rapport.component.html
@@ -1,1 +1,7 @@
-<p>list-rapport works!</p>
+
+<app-header></app-header>
+<div id="list__rapport">
+  <ng-container *ngFor="let rapport of listRapports$ | async">
+    <app-rapport [rapport]="rapport"></app-rapport>
+  </ng-container>
+</div>
