--- a/Projet/src/app/rapport/rapport.component.scss
+++ b/Projet/src/app/rapport/rapport.component.scss
@@ -1,16 +1,18 @@
 .rapport {
   font-family: Arial, sans-serif;
-  margin: 0 auto;
   max-width: 800px;
   padding: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  margin: 20px;
 
   &__header {
     display: flex;
     justify-content: space-between;
     margin-bottom: 30px;
 
-    &__logo {
-      width: 30%;
+    &__logo img {
+      width: 100px;
+      height: auto;
     }
 
     &__info {
